resposnsive editr , hit counter

--- a/style.css
+++ b/style.css
@@ -161,9 +161,12 @@ a:link {
 
 .box__link--advice {
   color: black;
+  -webkit-transition: ease-in-out 0.5s;
+  transition: ease-in-out 0.5s;
 }
 
 .box__link--advice:hover {
+  background-color: rgba(245, 222, 179, 0.651);
   color: darkgoldenrod;
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
@@ -173,6 +176,10 @@ a:link {
   opacity: 0.8;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+}
+
+.box__link--advice:hover h2 {
+  text-shadow: 2px 2px 2px black;
 }
 
 .amphor__contain {
